--- a/.github/workflows/lint-pr.yml
+++ b/.github/workflows/lint-pr.yml
@@ -7,6 +7,9 @@ on:
       - edited
       - synchronize
 
+permissions:
+  pull-requests: write
+
 jobs:
   main:
     name: Validate PR title
@@ -14,7 +17,7 @@ jobs:
     steps:
       - name: lint_pr_title
         id: lint_pr_title
-        uses: amannn/action-semantic-pull-request@v5.1.0
+        uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: marocchino/sticky-pull-request-comment@v2
