--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,7 @@
 		"eslint-config-next": "14.2.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
+		"lodash.debounce": "^4.0.8",
 		"next": "^14.2.3",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
