--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^5.2.1",
+		"react-toastify": "^10.0.5",
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
