--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rbac-wizard",
-	"version": "0.0.1",
+	"version": "0.0.4",
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
@@ -33,15 +33,15 @@
 		"clsx": "^2.0.0",
 		"d3": "^7.9.0",
 		"eslint": "8.48.0",
-		"eslint-config-next": "14.2.1",
+		"eslint-config-next": "^14.2.5",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"lodash.debounce": "^4.0.8",
 		"next": "^14.2.5",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
-		"react": "^17.0.0 || ^18.0.0",
-		"react-dom": "^17.0.0 || ^18.0.0",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^5.2.1",
 		"react-toastify": "^10.0.5",
 		"styled-components": "^6.1.11",
@@ -51,9 +51,5 @@
 	},
 	"devDependencies": {
 		"@types/d3": "^7.4.3"
-	},
-	"peerDependencies": {
-		"react": "^17.0.0 || ^18.0.0",
-		"react-dom": "^17.0.0 || ^18.0.0"
 	}
 }
