--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,12 @@ name: release
 on:
   push:
     tags: ['v*.*.*']
+  workflow_dispatch:
+    inputs:
+      version:
+          description: 'Version to release'
+          required: true
+          default: 'v0.0.0'
 
 permissions:
   contents: write
