--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: release
 on:
   push:
     tags: ['v*.*.*']
+    branches:
+      - 52-fix-container-image-release-workflow-is-not-working
   workflow_dispatch:
     inputs:
       version:
@@ -45,7 +47,7 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to GHCR
-        if: github.event_name != 'pull_request'
+        # if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
