--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,26 +18,26 @@ permissions:
   issues: write
 
 jobs:
-  goreleaser:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - run: git fetch --force --tags
-      - uses: actions/setup-go@v5
-        with:
-          go-version: '1.23'
-      - uses: goreleaser/goreleaser-action@v5
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # goreleaser:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #     - run: git fetch --force --tags
+  #     - uses: actions/setup-go@v5
+  #       with:
+  #         go-version: '1.23'
+  #     - uses: goreleaser/goreleaser-action@v5
+  #       with:
+  #         distribution: goreleaser
+  #         version: latest
+  #         args: release --clean
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   containerize:
     runs-on: ubuntu-latest
-    needs: goreleaser
+    # needs: goreleaser
     steps:
       - name: Checkout
         uses: actions/checkout@v4
