--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -7,6 +7,11 @@ on:
     paths:
       - charts/**
 
+permissions:
+  contents: write
+  packages: write
+  issues: write
+
 jobs:
   release:
     permissions:
@@ -14,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
