fix: fixed helm chart
Signed-off-by: pehlicd <65170388+pehlicd@users.noreply.github.com>

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -38,3 +38,4 @@ jobs:
           packages_with_index: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: true
