fix: fixed helm chart
Signed-off-by: pehlicd <65170388+pehlicd@users.noreply.github.com>

--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           skip_existing: true
           packages_with_index: true
+          charts_dir: ./charts
+          mark_as_latest: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          CR_SKIP_EXISTING: true
