style: add color set for bindings
Signed-off-by: Alessio Greggi <ale_grey_91@hotmail.it>

--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
- "name": "rbac-wizard",
- "version": "0.0.6",
+ "name": "rancher-rbac-wizard",
+ "version": "0.1.0",
  "private": true,
  "scripts": {
   "dev": "next dev",
