--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,56 +16,39 @@ permissions:
   issues: write
 
 jobs:
-  goreleaser:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - uses: actions/setup-go@v5
+      with:
+        go-version: '1.23'
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22
+        cache: 'npm'
+        cache-dependency-path: ui/package.json
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.23
+        cache: true
+    - name: Build UI
+      run: |
+        make setup-ui
+        make build-ui
+    - name: Build Backend
+      run: |
+        make build-backend
+    - name: Create Release
+        uses: softprops/action-gh-release@v2
         with:
-          fetch-depth: 0
-      - run: git fetch --force --tags
-      - uses: actions/setup-go@v5
-        with:
-          go-version: '1.23'
-      - uses: goreleaser/goreleaser-action@v5
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --clean
+          files: |
+            ./bin/rancher-rbac-wizard
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  containerize:
-    runs-on: ubuntu-latest
-    needs: goreleaser
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to GHCR
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Docker meta
-        id: rbac-wizard
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ghcr.io/${{ github.repository }}        
-          tags: |
-            type=schedule
-            type=semver,pattern={{version}}
-            type=sha,prefix=
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.rbac-wizard.outputs.tags }}
-          labels: ${{ steps.rbac-wizard.outputs.labels }}
